<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tip Calculator</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="amount">Amount</string>
    <string name="custom_tip_percentage">Custom %</string>
    <string name="fifteen_percent">15%</string>
    <string name="eighteen_percent">18%</string>
    <string name="tip">Tip</string>
    <string name="total">Total</string>
    <string name="confirmMessage ">Are you sure you want to delete this search: \&quot;%s\&quot;?</string>
    <string name="delete ">Delete</string>
    <string name="tenPercent">10%</string>

</resources>
