<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/gridLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="2"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:rowCount="@integer/rowCountGridLayout"
    android:useDefaultMargins="true"
    tools:context="com.multiverse.tipcalculator.MainActivity" >

    <TextView
        android:id="@+id/amountTextView"
        android:layout_gravity="right"
        android:labelFor="@+id/amountEditText"
        android:text="@string/amount"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/amountEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:digits="0123456789"
        android:inputType="number"
        android:maxLength="6" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/amountDisplayTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal"
        android:layout_row="0"
        android:background="@android:color/holo_green_light"
        android:padding="@dimen/textview_padding"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
        android:id="@+id/percentLinearLayout"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal" >

        <TextView
            android:id="@+id/percent10TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/tenPercent"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/percent15TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/fifteen_percent"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/percentCustomTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/eighteen_percent"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>

    <TextView
        android:id="@+id/tipTexView"
        android:layout_gravity="right|center_vertical"
        android:text="@string/tip"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
        android:id="@+id/tipLinearLayout"
        android:layout_gravity="fill_horizontal"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tip10TextView"
            android:layout_width="@dimen/widthTextView"
            android:layout_height="fill_parent"
            android:layout_marginRight="18dp"
            android:background="@android:color/holo_orange_light"
            android:gravity="center"
            android:padding="@dimen/textview_padding"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/tip15TextView"
            android:layout_width="@dimen/widthTextView"
            android:layout_height="fill_parent"
            android:layout_gravity="center"
            android:layout_marginRight="@dimen/textview_margin"
            android:background="@android:color/holo_orange_light"
            android:gravity="center"
            android:padding="@dimen/textview_padding"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/tipCustomTextView"
            style="android:textViewStyle"
            android:layout_width="@dimen/widthTextView"
            android:layout_height="fill_parent"
            android:layout_marginLeft="@dimen/left_margin"
            android:background="@android:color/holo_orange_light"
            android:gravity="center"
            android:padding="@dimen/textview_padding"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>

    <TextView
        android:id="@+id/totalTextView"
        android:layout_gravity="right|center_vertical"
        android:text="@string/total"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
        android:id="@+id/totalLinearLayout"
        android:layout_gravity="fill_horizontal"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/total10TextView"
            android:layout_width="@dimen/widthTextView"
            android:layout_height="fill_parent"
            android:layout_marginRight="18dp"
            android:background="@android:color/holo_orange_light"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/total15TextView"
            android:layout_width="@dimen/widthTextView"
            android:layout_height="fill_parent"
            android:layout_gravity="center"
            android:layout_marginRight="@dimen/textview_margin"
            android:background="@android:color/holo_orange_light"
            android:gravity="center"
            android:padding="@dimen/textview_padding"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/totalCustomTextView"
            android:layout_width="@dimen/widthTextView"
            android:layout_height="fill_parent"
            android:layout_marginLeft="@dimen/left_margin"
            android:background="@android:color/holo_orange_light"
            android:gravity="center"
            android:padding="@dimen/textview_padding"
            android:singleLine="true"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>
    <Space />

    <LinearLayout
        android:id="@+id/seekBarLayout"
        android:layout_columnSpan="2"
        android:layout_gravity="fill_horizontal"
        android:layout_row="1"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/customPersentTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|fill_horizontal"
            android:text="@string/custom_tip_percentage"
            android:textAppearance="?android:attr/textAppearanceMedium" />
			
        <SeekBar
            android:id="@+id/customTipSeekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="30"
            android:progress="18" />

    </LinearLayout>

</GridLayout>